@@ -7,21 +7,23 @@ use dhope0000\LXDClient\Tools\Instances\CreateInstance;
 use dhope0000\LXDClient\Tools\Utilities\StringTools;
 use dhope0000\LXDClient\Constants\LxdInstanceTypes;
 use dhope0000\LXDClient\Objects\HostsCollection;
+use dhope0000\LXDClient\Model\CloudConfig\GetConfig;
 
 class DeployConfigToContainer
 {
     public function __construct(
         DeployToProfile $deployToProfile,
-        CreateInstance $createInstance
+        CreateInstance $createInstance,
+        GetConfig $getConfig
     ) {
         $this->deployToProfile = $deployToProfile;
         $this->createInstance = $createInstance;
+        $this->getConfig = $getConfig;
     }
 
     public function deploy(
         HostsCollection $hosts,
         string $containerName,
-        array $imageDetails,
         string $profileName = "",
         array $additionalProfiles = [],
         int $cloudConfigId = null,
@@ -31,6 +33,18 @@ class DeployConfigToContainer
         if (!is_numeric($cloudConfigId) && !is_numeric($cloudConfigRevId)) {
             throw new \Exception("Please provide cloud config id or a rev id", 1);
         }
+
+        if (!is_numeric($cloudConfigRevId)) {
+            $imageDetails = $this->getConfig->getLatestConfig($cloudConfigId)["imageDetails"];
+        } else {
+            $imageDetails = $this->getConfig->getLatestConfigByRevId($cloudConfigRevId)["imageDetails"];
+        }
+
+        if (empty($imageDetails)) {
+            throw new \Exception("Missing image details", 1);
+        }
+
+        $imageDetails = json_decode($imageDetails, true)["details"];
 
         if (empty($profileName)) {
             $profileName = StringTools::random(12);
