@@ -17,6 +17,7 @@ Changed
     Support limits when creating a project (#434)
     Show packets_dropped_outbound & packets_dropped_inbound on networks overview
     Support project limits on projects frontend
+    Don't require filling out image when deploying cloud-config
 
 Fixed
     First run doesn't toggle passwords properly (#390)
